; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ggc-zone.c_set_page_table_entry.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_ggc-zone.c_set_page_table_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32*** }

@G = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@PAGE_L2_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*)* @set_page_table_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_page_table_entry(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32***, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32***, i32**** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @G, i32 0, i32 0), align 8
  %9 = getelementptr inbounds i32**, i32*** %8, i64 0
  store i32*** %9, i32**** %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @LOOKUP_L1(i8* %10)
  store i64 %11, i64* %6, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i64 @LOOKUP_L2(i8* %12)
  store i64 %13, i64* %7, align 8
  %14 = load i32***, i32**** %5, align 8
  %15 = load i64, i64* %6, align 8
  %16 = getelementptr inbounds i32**, i32*** %14, i64 %15
  %17 = load i32**, i32*** %16, align 8
  %18 = icmp eq i32** %17, null
  br i1 %18, label %19, label %26

19:                                               ; preds = %2
  %20 = load i32, i32* @PAGE_L2_SIZE, align 4
  %21 = call i8* @xcalloc(i32 %20, i32 8)
  %22 = bitcast i8* %21 to i32**
  %23 = load i32***, i32**** %5, align 8
  %24 = load i64, i64* %6, align 8
  %25 = getelementptr inbounds i32**, i32*** %23, i64 %24
  store i32** %22, i32*** %25, align 8
  br label %26

26:                                               ; preds = %19, %2
  %27 = load i32*, i32** %4, align 8
  %28 = load i32***, i32**** %5, align 8
  %29 = load i64, i64* %6, align 8
  %30 = getelementptr inbounds i32**, i32*** %28, i64 %29
  %31 = load i32**, i32*** %30, align 8
  %32 = load i64, i64* %7, align 8
  %33 = getelementptr inbounds i32*, i32** %31, i64 %32
  store i32* %27, i32** %33, align 8
  ret void
}

declare dso_local i64 @LOOKUP_L1(i8*) #1

declare dso_local i64 @LOOKUP_L2(i8*) #1

declare dso_local i8* @xcalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
